--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Cool stuffs about Computer Vision and Robotics."
 meta_description: "computer vision , robotics  ,rgbd , odometry , kalman filter."
 logo: '/assets/images/logo.png'
 favicon: '/assets/images/logo.png'
-baseurl: /mediumish-theme-jekyll
+baseurl: /
 google_analytics: 'UA-121671993-1'
 disqus: 'watchdog0'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
