--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ authors:
     gravatar: 2fac263ee9f47b1c037ee2f1e2aa43a7
     email: dattadebrup@gmail.com
     web: https://dattadebrup.github.io
-    twitter: https://twitter.com/dattadebrup
+    twitter: https://twitter.com/DEBRUPDATTA
     description: ""
     
 
