--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 name: "Watchdog"
 description: "Cool stuffs about Computer Vision and Robotics."
 meta_description: "computer vision , robotics  ,rgbd , odometry , kalman filter."
-logo: '/assets/images/logo.png'
-favicon: '/assets/images/logo.png'
+logo: 'assets/images/logo.png'
+favicon: 'assets/images/logo.png'
 baseurl: /
 google_analytics: 'UA-121671993-1'
 disqus: 'watchdog0'
